--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,11 @@ h1{
 .pipe {
   position: absolute; /* para que as imagens de cada pipe não sobresaia em cima das outras*/
   bottom: 0; /*para colocar a imagem na base do container*/
-  width: 90px;
+  width: 20%;
   animation: pipe-animation 1s infinite linear;
 }
 .mario {
-  width: 180px;
+  width: 20%;
   position: absolute;
   bottom:0;
 }
